Fixed overflow anddetail removal bugs, minor changes to styling and details on report list

--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,7 @@ table.report_list td {
     padding: 10px;
     border-top: 1.5px solid black;
     border-bottom: 1.5px solid black;
+    border-left: 1.5px solid black;
 }
 
 table.report_list th {
@@ -103,6 +104,7 @@ table.report_list td button {
 /* Details Popup */
 div.details {
     overflow-x: auto;
+    overflow-y: auto;
     width: fit-content;
     margin: 2px;
     border: 3px solid black;
